# couchstore

./: .gitignore  CMakeLists.txt  config.h
cmake/: FindICU.cmake
include/libcouchstore/: couch_common.h  couch_db.h  file_ops.h  visibility.h
src/: bitfield.h  btree_modify.c  btree_read.c  byteswap.c  couch_db.c  couch_file_read.c  couch_save.c  couchscript.cc  db_compact.c  db_compact.c.orig  dbdump.c  internal.h  iobuffer.c  os.c  reduces.c  util.h
src/views/: file_merger.c
src/views/mapreduce/: visibility.h
tests/: couchstore_tests.h  file_merger_tests.c  file_sorter_tests.c  testapp.c
tests/mapreduce/: builtin.c  map.c  mapreduce_tests.h  reduce.c  tests.c
tests/views/: index_headers.c  reducers.c  reductions.c  tests.c  view_tests.h
